Database seed update